Fixed recipe card overflowing width of screen

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -15,7 +15,7 @@
 }
 
 .cardGradient {
-  background: linear-gradient(0deg, rgba(0, 0, 0, 0.8) 30%, transparent 100%);
+  background: linear-gradient(0deg, rgba(0, 0, 0, 1) 30%, transparent 100%);
 }
 
 img {
